2003-12-18  Jesper Harder  <harder@ifa.au.dk>

	* gnus-cus.el (defvar): defvar
	gnus-agent-cat-disable-undownloaded-faces.

2003-12-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-forward-subject-name-subject): Use
	gnus-extract-address-components instead of
	mail-header-parse-address because it may be called with non-ascii
	text.

2003-12-16  Per Abrahamsen  <abraham@dina.kvl.dk>

	* nnmail.el (nnmail-split-fancy): The widget now supports
	restrictions. 

2003-12-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnheader.el (nnheader-find-etc-directory): Find the newest one.

2003-12-16  Simon Josefsson  <jas@extundo.com>

	* sha1-el.el (autoload): Don't use ignore-errors.
	(sha1-use-external): Use condition-case.  Suggested by Katsumi
	Yamaoka <yamaoka@jpl.org>.

2003-12-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnmail.el (nnmail-split-fancy): Make it customizable with Emacs
	20 as well.

2003-12-15  Simon Josefsson  <jas@extundo.com>

	* sha1-el.el (autoload): Ignore errors for
	executable-find. (XEmacs ecrypto does not require sh-script where
	executable.el is located.)
	(sha1-use-external): Likewise.

	* sha1-el.el (sha1): Add defgroup.
	(sha1-maximum-internal-length, sha1-program, sha1-use-external)
	(sha1-program): Use 'sha1sum' from GNU CoreUtils instead of OpenSSL.
	(sha1): Autoload.

	* nndraft.el (nndraft-request-move-article): Copy definition of
	nnmh-request-move-article instead of calling it, because the nnmh
	version uses nnmh-request-article which isn't the same as the
	nndraft version.

2003-12-13  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el: added some gnus-registry autoloads
	(spam-split-symbolic-return): makes spam-split return 'spam
	instead of the value of spam-split-group when spam is detected
	(spam-split-symbolic-return-positive): makes spam-split return
	'ham instead of nil when ham is detected
	(spam-autodetect-recheck-messages): tells spam.el whether it
	should recheck all messages in a group, or only the unseen ones