@@ -1,3 +1,8 @@
+2003-12-18  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* mm-url.el (mm-url-insert-file-contents-external)
+	(mm-url-insert-file-contents): Added doc-strings.  Autoload.
+
 2003-12-18  Jesper Harder  <harder@ifa.au.dk>
 
 	* gnus-cus.el (defvar): defvar
